--- a/.github/workflows/kubernetes-service.yml
+++ b/.github/workflows/kubernetes-service.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Build and push Docker images
       run: |
           cd KubernetesDeployment-Dev/src/
-          docker build -t k8scontainerpratice.azurecr.io/frontend /frontend.
+          docker build -t k8scontainerpratice.azurecr.io/frontend ./frontend .
           docker push k8scontainerpratice.azurecr.io/frontend
           
-          docker build -t k8scontainerpratice.azurecr.io/adservice /adservice.
+          docker build -t k8scontainerpratice.azurecr.io/adservice ./adservice .
           docker push k8scontainerpratice.azurecr.io/frontend
