--- a/.github/workflows/kubernetes-service.yml
+++ b/.github/workflows/kubernetes-service.yml
@@ -24,4 +24,4 @@ jobs:
       run: |
           cd KubernetesDeployment-Dev/src/frontend
           docker build -t k8scontainerpratice.azurecr.io/frontend .
-          docker push k8scontainerpratice.azurecr.io/Ecart
+          docker push k8scontainerpratice.azurecr.io/ecartdockerimg
