--- a/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
@@ -14,7 +14,7 @@ spec:
   spec:
     containers:
       - name: server
-        image: "<ACR Name>.azurecr.io/frontend:v1"
+        image: "k8scontainerpratice.azurecr.io/frontend:latest"
         ports:
           - containerPort: 8080
 ---
