--- a/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: "k8scontainerpratice.azurecr.io/frontend:latest"
+          image: k8scontainerpratice.azurecr.io/frontend:latest
           ports:
             - containerPort: 8080
 
@@ -24,6 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
+  namespace: NonProd
 spec:
   type: ClusterIP
   selector:
