--- a/KubernetesDeployment-Dev/kubernetes/Manifest/adservice.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/adservice.yaml
@@ -32,4 +32,18 @@ spec:
     - name: http
       port: 9555
       targetPort: 9555
+      
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: adservice-pod
+  labels:
+    app: adservice
+spec:
+  containers:
+    - name: server
+      image: "k8scontainerpratice.azurecr.io/adservice:latest"
+      ports:
+        - containerPort: 9555
 
