--- a/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
@@ -33,3 +33,18 @@ spec:
     - name: http
       port: 80
       targetPort: 8080
+
+
+---      
+apiVersion: v1
+kind: Pod
+metadata:
+  name: adservice-pod
+  labels:
+    app: adservice
+spec:
+  containers:
+    - name: server
+      image: "k8scontainerpratice.azurecr.io/adservice:latest"
+      ports:
+        - containerPort: 9555
