--- a/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
@@ -39,12 +39,12 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: adservice-pod
+  name: frontend-pod
   labels:
-    app: adservice
+    app: frontend
 spec:
   containers:
     - name: server
-      image: "k8scontainerpratice.azurecr.io/adservice:latest"
+      image: "k8scontainerpratice.azurecr.io/frontend:latest"
       ports:
-        - containerPort: 9555
+        - containerPort: 8080
