--- a/KubernetesDeployment-Dev/kubernetes/Manifest/adservice.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/adservice.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: "k8scontainerpratice.azurecr.io/adservice:latest"
+          image: "k8scontainerregistry1.azurecr.io/adservice:latest"
           ports:
             - containerPort: 9555
 
