--- a/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
@@ -19,7 +19,6 @@ spec:
             - containerPort: 8080
 
 ---
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -34,17 +33,17 @@ spec:
       port: 80
       targetPort: 8080
 
-
----      
+---
 apiVersion: v1
-kind: Pod
+kind: Service
 metadata:
-  name: frontend-pod
-  labels:
-    app: frontend
+  name: frontend
+  namespace: nonprod
 spec:
-  containers:
-    - name: server
-      image: "k8scontainerpratice.azurecr.io/frontend:latest"
-      ports:
-        - containerPort: 8080
+  type: Loadbalancer
+  selector:
+    app: frontend
+  ports:
+    - name: http
+      port: 80
+      targetPort: 8080
