--- a/KubernetesDeployment-Dev/kubernetes/Ingress/ingress.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Ingress/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: ecart.com
+    - host: 10.244.0.0/16
       http:
         paths:
           - path: /adservice
@@ -16,34 +16,7 @@ spec:
                 name: adservice
                 port:
                   number: 9555
-          - path: /currencyservice
-            pathType: Prefix
-            backend:
-              service:
-                name: currencyservice
-                port:
-                  number: 7000
-          - path: /cartservice
-            pathType: Prefix
-            backend:
-              service:
-                name: cartservice
-                port:
-                  number: 7070
-          - path: /checkoutservice
-            pathType: Prefix
-            backend:
-              service:
-                name: checkoutservice
-                port:
-                  number: 5050
-          - path: /emailservice
-            pathType: Prefix
-            backend:
-              service:
-                name: emailservice
-                port:
-                  number: 8090
+        
           - path: /frontend
             pathType: Prefix
             backend:
@@ -51,38 +24,4 @@ spec:
                 name: frontend
                 port:
                   number: 8080
-          - path: /paymentservice
-            pathType: Prefix
-            backend:
-              service:
-                name: paymentservice
-                port:
-                  number: 50051
-          - path: /productcatalogservice
-            pathType: Prefix
-            backend:
-              service:
-                name: productcatalogservice
-                port:
-                  number: 3550
-          - path: /recommendationservice
-            pathType: Prefix
-            backend:
-              service:
-                name: recommendationservice
-                port:
-                  number: 8085
-          - path: /shippingservice
-            pathType: Prefix
-            backend:
-              service:
-                name: shippingservice
-                port:
-                  number: 50051
-          - path: /loadgenerator
-            pathType: Prefix
-            backend:
-              service:
-                name: loadgenerator
-                port:
-                  name: http
+        
