--- a/.github/workflows/kubernetes-service.yml
+++ b/.github/workflows/kubernetes-service.yml
@@ -36,3 +36,8 @@ jobs:
       run: |
         cd KubernetesDeployment-Dev/kubernetes/Manifest/
         kubectl apply -f frontend.yaml
+        
+    - name: Apply Kubernetes ingress
+      run: |
+        cd KubernetesDeployment-Dev/kubernetes/Ingress/
+        kubectl apply -f ingress.yaml
