--- a/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
@@ -32,4 +32,19 @@ spec:
     - name: http
       port: 80
       targetPort: 8080
+---      
+apiVersion: v1
+kind: Pod
+metadata:
+  name: frontend-pod
+  namespace: nonprod
+  labels:
+    app: frontend
+spec:
+  containers:
+    - name: server
+      image: "k8scontainerregistry1.azurecr.io/frontend:latest"
+      ports:
+        - containerPort: 8080
+
 
