--- a/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
@@ -35,6 +35,19 @@ spec:
       targetPort: 8080
       
       
-
+---      
+apiVersion: v1
+kind: Pod
+metadata:
+  name: frontend-pod
+  namespace: nonprod
+  labels:
+    app: frontend
+spec:
+  containers:
+    - name: server
+      image: "k8scontainerregistry1.azurecr.io/frontend:latest"
+      ports:
+        - containerPort: 8080
 
 
