--- a/KubernetesDeployment-Dev/src/frontend/Dockerfile
+++ b/KubernetesDeployment-Dev/src/frontend/Dockerfile
@@ -1,7 +1,7 @@
 
 FROM golang:1.20.4-alpine@sha256:0a03b591c358a0bb02e39b93c30e955358dadd18dc507087a3b7f3912c17fe13 as builder
 
-WORKDIR /app
+WORKDIR /src
 
 COPY go.mod go.sum ./
 
@@ -13,4 +13,4 @@ RUN go build -o frontend .
 
 EXPOSE 8080
 
-CMD [ "./frontend" ]
+ENTRYPOINT ["src/server"]
