--- a/KubernetesDeployment-Dev/src/frontend/Dockerfile
+++ b/KubernetesDeployment-Dev/src/frontend/Dockerfile
@@ -11,6 +11,17 @@ COPY . .
 
 RUN go build -o frontend .
 
+ARG SKAFFOLD_GO_GCFLAGS
+RUN go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -o /go/bin/frontend .
+
+FROM alpine:3.18.0@sha256:02bb6f428431fbc2809c5d1b41eab5a68350194fb508869a33cb1af4444c9b11 as release
+RUN apk add --no-cache ca-certificates \
+    busybox-extras net-tools bind-tools
+WORKDIR /src
+COPY --from=builder /go/bin/frontend /src/server
+COPY ./templates ./templates
+COPY ./static ./static
+
 EXPOSE 8080
 
 ENTRYPOINT ["src/server"]
