--- a/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
+++ b/KubernetesDeployment-Dev/kubernetes/Manifest/frontend.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: frontend
           image: "k8scontainerregistry1.azurecr.io/frontend:latest"
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
 
